config-root/namespaces/jx-production/jenkinsx-go-http/jenkinsx-go-http-jenkinsx-go-http-deploy.yaml
# Source: jenkinsx-go-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkinsx-go-http-jenkinsx-go-http
  labels:
    draft: draft-app
    chart: "jenkinsx-go-http-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jenkinsx-go-http-jenkinsx-go-http
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jenkinsx-go-http-jenkinsx-go-http
    spec:
      containers:
        - name: jenkinsx-go-http
          image: "10.107.169.84/jjasghar/jenkinsx-go-http:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "knative-docker-user-pass"
