config-root/namespaces/jx-production/jenkinsx-go-http/jenkinsx-go-http-svc.yaml
# Source: jenkinsx-go-http/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkinsx-go-http
  labels:
    chart: "jenkinsx-go-http-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jenkinsx-go-http-jenkinsx-go-http
